--- a/Code/NTTV/templates/forums.html
+++ b/Code/NTTV/templates/forums.html
@@ -2,286 +2,132 @@
 <html lang="uk">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="{{ url_for('static', filename='global.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='components/header.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='components/footer.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='forum.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NTTV – Теми</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1119387653458763"
-     crossorigin="anonymous"></script>
-     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-     <style>
-  div[style*="width: 300px"] {
-    background-color: var(--color-surface);
-    border-radius: var(--radius);
-    padding: 20px;
-    box-shadow: var(--shadow);
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-
-  div[style*="border: 3px solid darkred"] {
-    border-color: var(--color-accent);
-    background-color: #1a1a1a;
-    border-radius: var(--radius);
-    padding: 20px;
-    box-shadow: var(--shadow);
-  }
-
-  div[style*="border: 3px solid darkred"] h2 {
-    color: var(--color-accent);
-    font-weight: 700;
-    margin-bottom: 12px;
-  }
-  form {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-  }
-
-  form label {
-    font-weight: 600;
-    color: var(--color-primary);
-  }
-
-  form input[type="text"] {
-    background-color: var(--color-surface);
-    border: 1px solid var(--color-accent);
-    padding: 10px;
-    border-radius: var(--radius);
-    color: var(--color-primary);
-    transition: border-color 0.3s ease;
-  }
-
-  form input[type="text"]:focus {
-    border-color: var(--color-primary);
-    outline: none;
-    box-shadow: 0 0 6px var(--color-accent);
-  }
-
-  form button {
-    background-color: var(--color-accent);
-    color: var(--color-bg);
-    border: none;
-    padding: 12px;
-    font-weight: 700;
-    border-radius: var(--radius);
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    text-transform: uppercase;
-  }
-
-  form button:hover {
-    background-color: var(--color-primary);
-  }
-
-  .admin-menu {
-    margin-top: 10px;
-    display: flex;
-    gap: 12px;
-  }
-
-  .admin-menu form button {
-    padding: 8px 16px;
-    font-weight: 600;
-    border-radius: var(--radius);
-    cursor: pointer;
-    border: 1px solid var(--color-accent);
-    background: transparent;
-    color: var(--color-accent);
-    transition: background-color 0.3s ease;
-  }
-
-  .admin-menu form button:hover {
-    background-color: var(--color-accent);
-    color: var(--color-bg);
-  }
-.main-layout {
-  display: flex;
-  gap: 20px;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-  box-sizing: border-box;
-  align-items: flex-start; 
-}
-
-.sidebar {
-  flex: 0 0 300px; 
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-}
-
-.forum-list {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 15px;
-}
-@media (max-width: 768px) {
-  .main-layout {
-    flex-direction: column;
-    padding: 10px;
-  }
-
-  .sidebar {
-    flex: 1;
-    width: 100%;
-  }
-
-  .forum-list {
-    width: 100%;
-  }
-
-  nav {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-  }
-
-  header h1 {
-    font-size: 1.5rem;
-  }
-
-  .card {
-    padding: 12px;
-  }
-
-  form input[type="text"], form button {
-    width: 100%;
-  }
-
-  .admin-menu {
-    flex-direction: column;
-    gap: 8px;
-  }
-}
-
-
-</style>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Staatliches:wght@400&family=JetBrains+Mono:wght@400;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
-<header>
-    <h1> NTTV</h1>
-    <p class="subtitle_s">NextTheme.TV – Платформа для тем, творчості та спілкування</p>
-    <nav>
-        <a href="profile">профіль</a>
-        <a href="profile_subs">Підписки</a>
-        <a href="/">головна</a>
-    </nav>
-</header>
-<main class="main-layout">
-    <div class="sidebar">
-        <div class="card create-forum-card">
-            {% if 'user_id' in session %}
-                <section class="create-forum">
-                    <h2>Створення тем</h2>
-                    <form action="{{ url_for('forums') }}" method="POST">
-                        <label for="forum_name">Назва Теми:</label>
-                        <input type="text" id="forum_name" name="forum_name" required />
-                        <label for="forum_description">Опис Теми:</label>
-                        <input type="text" id="forum_description" name="forum_description" required />
-                        <button type="submit">Створити Теми</button>
-                    </form>
-                </section>
-                <p class="subtitle_s">вагаєтеся чи створювати тему? чи є запитання? звертайтеся до нашого :</p>
-                <p class="subtitle"><a href="https://docs.google.com/document/d/1D3_-t8Nhd7-MKiRnXctxgexI1nBVyEr6cAERzAXqoIg/edit?usp=sharing">Документу</a></p>
-            {% else %}
-                <p>Для створення Теми необхідно <a href="{{ url_for('login') }}">увійти</a>.</p>
-            {% endif %}
-        </div>
+  {% include "components/header.jinja" %}
 
-        <div class="card live-forums">
-            <h2>Теми - В етері</h2>
-            <p class="subtitle_s">Світи спілкування наживо чекають на вас!</p>
-            <ul>
-                {% for forum_id, forum in forums if forum.is_live %}
-                <li>
-                    <a href="{{ url_for('view_forum', forum_id=forum_id) }}">
-                        {{ forum['name'] }}
-                    </a>
-                </li>
-                {% endfor %}
-            </ul>
-        </div>
-    </div>
+  <main class="main-layout">
+      <div class="sidebar">
+          <div class="card create-forum-card">
+              {% if 'user_id' in session %}
+                  <section class="create-forum">
+                      <h2>Створення тем</h2>
+                      <form action="{{ url_for('forums') }}" method="POST">
+                          <label for="forum_name">Назва Теми:</label>
+                          <input type="text" id="forum_name" name="forum_name" required />
+                          <label for="forum_description">Опис Теми:</label>
+                          <input type="text" id="forum_description" name="forum_description" required />
+                          <button type="submit" class="fix_btn">Створити Теми</button>
+                      </form>
+                  </section>
+                  <p class="subtitle_s">вагаєтеся чи створювати тему? чи є запитання? звертайтеся до нашого :</p>
+                  <p class="subtitle"><a href="https://docs.google.com/document/d/1D3_-t8Nhd7-MKiRnXctxgexI1nBVyEr6cAERzAXqoIg/edit?usp=sharing">Документу</a></p>
+              {% else %}
+                  <p>Для створення Теми необхідно <a href="{{ url_for('login') }}">увійти</a>.</p>
+              {% endif %}
+          </div>
 
-    <section class="forum-list card">
-        <h2 class="red-title">Теми</h2>
-        <h3 class="subtitle_s">тут сотні тисяч маленьких світів які хочуть, щоб ви їх дослідили...</h3>
-        <ul>
-            {% for forum_id, forum in forums %}
-            <li class="post">
-                <div class="post-content">
-                    <h3>{{ forum['name'] }}</h3>
-                    <h4 class="live">{% if forum.is_live %}/ В етері {% endif %}</h4>
-                    <h4 class="subtitle_s">підписники: {{ get_subscriber_count(forum_id) }}</h4>
-                    <h5 class="subtitle">Реп: {{ forum['reputation'] }}</h5>
-                    <p>{{ forum['description'[:50]] | safe }}</p>
-                    <div class="author">
-                         Автор:
-                    {% set author = users.get(forum['author_id']) %}
-                    {% if author %}
-                        <a href="{{ url_for('view_user_profile', uid=forum['author_id']) }}">
-                    {{ author['username'] }}
-                    </a>
-                    {% else %}
-                        ???
-                    {% endif %}
-                    </div>
+          <div class="card live-forums">
+              <h2>Теми - В етері</h2>
+              <p class="subtitle_s">Світи спілкування наживо чекають на вас!</p>
+              <ul>
+                  {% for forum_id, forum in forums if forum.is_live %}
+                  <li>
+                      <a href="{{ url_for('view_forum', forum_id=forum_id) }}">
+                          {{ forum['name'] }}
+                      </a>
+                  </li>
+                  {% endfor %}
+              </ul>
+          </div>
+      </div>
 
-                    <a href="{{ url_for('view_forum', forum_id=forum_id) }}">🔍 Переглянути</a>
-                </div>
+      <section class="forum-list card">
+          <h2 class="red-title">Теми</h2>
+          <h3 class="subtitle_s">тут сотні тисяч маленьких світів які хочуть, щоб ви їх дослідили...</h3>
+          <ul>
+              {% for forum_id, forum in forums %}
+              <li class="post">
+                  <div class="post-content">
+                      <h3>{{ forum['name'] }}</h3>
+                      <h4 class="live">{% if forum.is_live %}/ В етері {% endif %}</h4>
+                      <h4 class="subtitle_s">підписники: {{ get_subscriber_count(forum_id) }}</h4>
+                      <h5 class="subtitle">Реп: {{ forum['reputation'] }}</h5>
+                      <p>{{ forum['description'[:50]] | safe }}</p>
+                      <div class="author">
+                            Автор:
+                      {% set author = users.get(forum['author_id']) %}
+                      {% if author %}
+                          <a href="{{ url_for('view_user_profile', uid=forum['author_id']) }}">
+                      {{ author['username'] }}
+                      </a>
+                      {% else %}
+                          ???
+                      {% endif %}
+                      </div>
 
-                {% if show_menu == forum_id %}
-                <div class="admin-menu">
-                    {% if session['user_id'] == forum['author_id'] or 'admin' in session.get('roles', []) %}
-                        <form action="{{ url_for('delete_forum', forum_id=forum_id) }}" method="POST" onsubmit="return confirm('Ви впевнені, що хочете видалити цю тему?')">
-                            <button type="submit" class="delete-btn">Видалити тему</button>
-                        </form>
-                        <form action="{{ url_for('edit_forum', forum_id=forum_id) }}" method="GET">
-                            <button type="submit">Редагувати</button>
-                        </form>
-                    {% endif %}
-                </div>
-                {% endif %}
+                      <a href="{{ url_for('view_forum', forum_id=forum_id) }}">🔍 Переглянути</a>
+                  </div>
 
-                <div class="votes">
-                    <form action="{{ url_for('vote_forum', forum_id=forum_id) }}" method="POST">
-                        {% if session['user_id'] not in forum['votes'] %}
-                            <button type="submit" name="vote" value="up">⬆️</button>
-                            <span>{{ forum['vote_count'] }}</span>
-                            <button type="submit" name="vote" value="down">⬇️</button>
-                        {% else %}
-                            <button type="submit" name="vote" value="cancel">❌</button>
-                        {% endif %}
-                    </form>
-                </div>
+                  {% if show_menu == forum_id %}
+                  <div class="admin-menu">
+                      {% if session['user_id'] == forum['author_id'] or 'admin' in session.get('roles', []) %}
+                          <form action="{{ url_for('delete_forum', forum_id=forum_id) }}" method="POST" onsubmit="return confirm('Ви впевнені, що хочете видалити цю тему?')">
+                              <button type="submit" class="delete-btn">Видалити тему</button>
+                          </form>
+                          <form action="{{ url_for('edit_forum', forum_id=forum_id) }}" method="GET">
+                              <button type="submit">Редагувати</button>
+                          </form>
+                      {% endif %}
+                  </div>
+                  {% endif %}
 
-                {% if 'user_id' in session %}
-                    {% if session['user_id'] not in forum['subscribers'] %}
-                        <form action="{{ url_for('subscribe_forum', forum_id=forum_id) }}" method="POST">
-                            <button type="submit">Підписатися</button>
-                        </form>
-                    {% else %}
-                        <form action="{{ url_for('unsubscribe_forum', forum_id=forum_id) }}" method="POST">
-                            <button type="submit">Відписатися</button>
-                        </form>
-                    {% endif %}
-                    {% if session['user_id'] == forum['author_id'] %}
-                        <form action="{{ url_for('moderate_forum', forum_id=forum_id) }}" method="GET">
-                            <button type="submit">керувати</button>
-                        </form>
-                    {% endif %}
-                {% else %}
-                    <p>Для підписки необхідно <a href="{{ url_for('login') }}">увійти</a>.</p>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
-    </section>
-</main>
-<script>
+                  <div class="votes">
+                      <form action="{{ url_for('vote_forum', forum_id=forum_id) }}" method="POST">
+                          {% if session['user_id'] not in forum['votes'] %}
+                              <button type="submit" name="vote" value="up">⬆️</button>
+                              <span>{{ forum['vote_count'] }}</span>
+                              <button type="submit" name="vote" value="down">⬇️</button>
+                          {% else %}
+                              <button type="submit" name="vote" value="cancel">❌</button>
+                          {% endif %}
+                      </form>
+                  </div>
+                  
+                  {% if 'user_id' in session %}
+                      {% if session['user_id'] not in forum['subscribers'] %}
+                          <form action="{{ url_for('subscribe_forum', forum_id=forum_id) }}" method="POST">
+                              <button type="submit">Підписатися</button>
+                          </form>
+                      {% else %}
+                          <form action="{{ url_for('unsubscribe_forum', forum_id=forum_id) }}" method="POST">
+                              <button type="submit">Відписатися</button>
+                          </form>
+                      {% endif %}
+                      {% if session['user_id'] == forum['author_id'] %}
+                          <form action="{{ url_for('moderate_forum', forum_id=forum_id) }}" method="GET">
+                              <button type="submit">керувати</button>
+                          </form>
+                      {% endif %}
+                  {% else %}
+                      <p>Для підписки необхідно <a href="{{ url_for('login') }}">увійти</a>.</p>
+                  {% endif %}
+              </li>
+              {% endfor %}
+          </ul>
+      </section>
+  </main>
+
+  {% include "components/footer.jinja" %}
+
+  <script>
   setInterval(() => {
     fetch(location.href, { headers: { "X-Requested-With": "XMLHttpRequest" } })
       .then(res => res.text())
@@ -303,11 +149,6 @@
       })
       .catch(err => console.error("Помилка оновлення:", err));
   }, 30000); 
-</script>
-
-
-<footer>
-    <p>2025 NTTV — Разом творимо стильну реальність</p>
-</footer>
+  </script>
 </body>
 </html>
